// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Colors all 1`] = `
<div
  className="container p-4"
>
  <h1
    className="text-xl"
  >
    Primary
  </h1>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(51, 51, 51)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(10, 10, 10)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(20, 20, 20)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(31, 31, 31)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(41, 41, 41)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(245, 245, 245)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(214, 214, 214)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(173, 173, 173)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(133, 133, 133)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(92, 92, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h1
    className="text-xl mt-8"
  >
    Utility
  </h1>
  <h2
    className="text-l mt-4"
  >
    Red
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(224, 85, 72)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(89, 34, 28)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(134, 51, 43)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(179, 68, 57)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(253, 246, 246)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(251, 238, 236)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(249, 221, 218)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(243, 187, 182)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(236, 153, 145)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(230, 119, 109)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h2
    className="text-l mt-4"
  >
    Highlight Green
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(91, 164, 73)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(68, 123, 55)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(248, 252, 247)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(240, 250, 238)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(227, 245, 222)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(199, 235, 190)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(170, 226, 157)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(142, 216, 125)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Typography Body 1`] = `
Array [
  <section
    className="container p-4 undefined"
  >
    <h1
      className="text-4xl"
    >
      PC
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
  <section
    className="container p-4 mt-12"
  >
    <h1
      className="text-4xl"
    >
      SP
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
]
`;

exports[`Storyshots Components|Badge all 1`] = `
<div
  className="sc-bwzfXH GIbIi"
>
  10
</div>
`;

exports[`Storyshots Components|Button Box 1`] = `
<button
  className="sc-htpNat jBbDys"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Confirm
</button>
`;

exports[`Storyshots Components|Button Circle 1`] = `
<button
  className="sc-ifAKCX jYTyKI"
  onClick={[Function]}
  type="reset"
/>
`;

exports[`Storyshots Components|Button Text 1`] = `
<button
  className="sc-EHOje euMnIY"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-bZQynM bUEYNy"
    data-test="text-button-child"
  >
    Show filters
  </span>
</button>
`;

exports[`Storyshots Components|Checkbox all 1`] = `
<div
  className="sc-gzVnrw iyQuzR"
  data-test="nocheck-box"
  onClick={[Function]}
  tabIndex={1}
>
  <div
    className="sc-bxivhb hBuNrQ sc-htoDjs kVfsdQ"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-dnqmqq gZhRLK"
  >
    Checkbox
  </span>
</div>
`;

exports[`Storyshots Components|Datepicker Null 1`] = `
<div
  className="sc-gqjmRU cEmUoj"
  width="100%"
>
  <div
    className="SingleDatePicker SingleDatePicker_1"
  >
    <div>
      <div
        className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
      >
        <button
          className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-bxivhb hBuNrQ"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </button>
        <div
          className="DateInput DateInput_1"
        >
          <input
            aria-describedby="DateInput__screen-reader-message-date"
            aria-label=""
            autoComplete="off"
            className="DateInput_input DateInput_input_1"
            disabled={false}
            id="date"
            name="date"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            readOnly={false}
            required={false}
            type="text"
            value=""
          />
          <p
            className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
            id="DateInput__screen-reader-message-date"
          >
            Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Datepicker Standard 1`] = `
<div
  className="sc-gqjmRU cEmUoj"
  width="100%"
>
  <div
    className="SingleDatePicker SingleDatePicker_1"
  >
    <div>
      <div
        className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
      >
        <button
          className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-bxivhb hBuNrQ"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </button>
        <div
          className="DateInput DateInput_1"
        >
          <input
            aria-describedby="DateInput__screen-reader-message-date"
            aria-label=""
            autoComplete="off"
            className="DateInput_input DateInput_input_1"
            disabled={false}
            id="date"
            name="date"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            readOnly={false}
            required={false}
            type="text"
            value="2019年12月25日"
          />
          <p
            className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
            id="DateInput__screen-reader-message-date"
          >
            Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Input 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-jKJlTe kcvHkS"
    width="250px"
  >
    <div
      className="sc-eNQAEJ iAtEUT"
    >
      <div>
        <div
          className="sc-jTzLTM dzFfKf"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-fjdhpX hrkspm"
            data-test="text"
          >
            選択してください
          </div>
          <div
            className="sc-bxivhb hBuNrQ sc-VigVT hnuDpD"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </div>
        <ul
          className="sc-chPdSV bwBBtF sc-hMqMXs lfEFkv"
          data-test="itemList"
        >
          <div
            className="sc-kgoBCf FDJDT"
          >
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                りんご
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                いちご
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                バナナ
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                メロン
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                さくらんぼ
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                ぶどう
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Multi 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-jKJlTe kcvHkS"
    width="250px"
  >
    <div
      className="sc-eNQAEJ iAtEUT"
    >
      <div>
        <div
          className="sc-jTzLTM dzFfKf"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-fjdhpX hrkspm"
            data-test="text"
          >
            選択してください
          </div>
          <div
            className="sc-bxivhb hBuNrQ sc-VigVT hnuDpD"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </div>
        <ul
          className="sc-chPdSV bwBBtF sc-hMqMXs lfEFkv"
          data-test="itemList"
        >
          <div
            className="sc-kgoBCf FDJDT"
          >
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                りんご
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                いちご
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                バナナ
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                メロン
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                さくらんぼ
              </div>
            </li>
            <li
              className="sc-kGXeez gJHipe"
              onClick={[Function]}
            >
              <div
                className="sc-bxivhb hBuNrQ sc-kpOJdX iwZReu"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                size="24px"
              />
              <div
                className="sc-dxgOiQ ddGaJS"
              >
                ぶどう
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Borderless 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-iRbamj iQesWm"
    width="250px"
  >
    <div>
      <div
        className="sc-csuQGl dLfdIA"
        data-test="body"
        onClick={[Function]}
      >
        <div
          className="sc-Rmtcm cUnNdX"
          data-test="text"
        >
          20
        </div>
        <div
          className="sc-bxivhb hBuNrQ sc-gipzik ivjCph"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
      </div>
      <ul
        className="sc-kEYyzF lesDll sc-jlyJG gmQAfy"
        data-test="itemList"
      >
        <li
          className="sc-kkGfuU ewELqP"
          onClick={[Function]}
        >
          <div
            className="sc-bxivhb iLtEre"
            color="rgb(51, 51, 51)"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <div
            className="sc-iAyFgw favZgW"
          >
            20
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Default 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-eHgmQL cXxRes"
    width="200px"
  >
    <div
      className="sc-cvbbAY eFzwdd"
    >
      <div>
        <div
          className="sc-brqgnP dtYkOy"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-bxivhb hBuNrQ sc-jWBwVP hiBtpa"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <div
            className="sc-jAaTju kHYYUq"
            data-test="text"
          >
            
          </div>
        </div>
        <ul
          className="sc-kEYyzF lesDll sc-cMljjf ezmHhC"
          data-test="itemList"
        >
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb iLtEre"
              color="rgb(51, 51, 51)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              りんご
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              いちご
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              バナナ
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              メロン
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              さくらんぼ
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              ぶどう
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Input 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-eHgmQL cXxRes"
    width="200px"
  >
    <div
      className="sc-cvbbAY eFzwdd"
    >
      <div>
        <div
          className="sc-brqgnP dtYkOy"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-bxivhb hBuNrQ sc-jWBwVP hiBtpa"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <div
            className="sc-jAaTju kHYYUq"
            data-test="text"
          >
            
          </div>
        </div>
        <ul
          className="sc-kEYyzF lesDll sc-cMljjf ezmHhC"
          data-test="itemList"
        >
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb iLtEre"
              color="rgb(51, 51, 51)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              りんご
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              いちご
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              バナナ
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              メロン
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              さくらんぼ
            </div>
          </li>
          <li
            className="sc-kkGfuU ewELqP"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb eaqBKs"
              color="rgb(234, 234, 234)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
            <div
              className="sc-iAyFgw favZgW"
            >
              ぶどう
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle ItemList 1`] = `
<div
  className="ml-20 mt-10"
>
  <ul
    className="sc-kEYyzF lesDll"
    data-test="itemList"
  >
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb iLtEre"
        color="rgb(51, 51, 51)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        りんご
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        いちご
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        バナナ
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        メロン
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        さくらんぼ
      </div>
    </li>
    <li
      className="sc-kkGfuU ewELqP"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-iAyFgw favZgW"
      >
        ぶどう
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Input Number 1`] = `
<div
  className="sc-fAjcbJ fuhVzn"
>
  <input
    className="sc-caSCKo brddJx"
    format="number"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Enter your age"
    value="0"
  />
  
</div>
`;

exports[`Storyshots Components|Input Text 1`] = `
<div
  className="sc-fAjcbJ fuhVzn"
>
  <input
    className="sc-caSCKo brddJx"
    format="text"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Enter your name"
    value=""
  />
</div>
`;

exports[`Storyshots Components|MeatballKebabMenu all 1`] = `
<div
  className="mr-10 mt-56"
>
  <div
    className="sc-kjoXOD gYQUfh"
  >
    <div>
      <div
        className="sc-cHGsZl coXLNZ top"
        data-test="menu-component"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ sc-TOsTZ kjYrri"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgAjT cuzzPp"
        >
          <ul
            className="sc-cJSrbW eijIfz top hidden"
            data-test="list-component"
          >
            <li
              className="sc-ksYbfQ fNkZvS"
              data-test="list-item0"
              onClick={[Function]}
            >
              リスト1
            </li>
            <li
              className="sc-ksYbfQ fNkZvS"
              data-test="list-item1"
              onClick={[Function]}
            >
              リスト2
            </li>
            <li
              className="sc-ksYbfQ kaeykE"
              color="destructive"
              data-test="list-item2"
              onClick={[Function]}
            >
              リスト3
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`Storyshots Components|Modal all 1`] = `
<div
  className="m-10"
>
  <modal>
    <div
      className="sc-hmzhuo dPoddB"
    >
      <div
        className="sc-frDJqD huYtoS"
      >
        <div
          className="sc-kvZOFW litSxG"
        >
          <div
            className="sc-hqyNC bPgEmo"
          >
            ロール作成
          </div>
          <div
            className="sc-jbKcbu dBesSi"
            data-test="closeIcon"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb gdKZPc"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24"
            />
          </div>
        </div>
        <div
          className="sc-dNLxif vPJhA"
        >
          コンテンツ
        </div>
        <div
          className="sc-jqCOkK rGWGb"
        >
          <button
            className="sc-htpNat jBbDys sc-uJMKN gvkkQU"
            data-test="button0"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            登録
          </button>
        </div>
      </div>
    </div>
  </modal>
</div>
`;

exports[`Storyshots Components|RadioButton all 1`] = `
<div
  className="sc-bbmXgH iKPCsz"
  data-test="radio-on"
  onClick={[Function]}
>
  <div
    className="sc-bxivhb hBuNrQ sc-gGBfsJ gaIPkL"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-jnlKLf dwPKnT"
  >
    RadioButton
  </span>
</div>
`;

exports[`Storyshots Components|SegmentedControl molecule 1`] = `
<div>
  <div
    className="sc-fYxtnH kfQgcM"
    data-test="item0"
    onClick={[Function]}
    selected={true}
  >
    最初のタブ
  </div>
  <div
    className="sc-fYxtnH ekqjvd"
    data-test="item1"
    onClick={[Function]}
    selected={false}
  >
    真ん中のタブ
  </div>
  <div
    className="sc-fYxtnH ekqjvd"
    data-test="item2"
    onClick={[Function]}
    selected={false}
  >
    最後のタブ
  </div>
</div>
`;

exports[`Storyshots Components|Switch all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-tilXH esRCFK"
    data-test="switch-off"
  >
    <span
      className="sc-cIShpX giuCOJ"
    >
      OFF
    </span>
    <div
      className="sc-hEsumM huEKJG"
      data-test="switch"
      onClick={[Function]}
    >
      <span
        className="sc-ktHwxA kHFIRR"
      />
    </div>
    <span
      className="sc-cIShpX giuCOJ"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Text Standard 1`] = `
<p
  className="sc-kafWEX iRRYTD"
>
  Hello
</p>
`;

exports[`Storyshots Components|Textarea all 1`] = `
<div
  className="sc-feJyhm miZxk"
>
  <textarea
    className="sc-iELTvK boSZIh"
    errored={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="文字を入力してください。"
    style={
      Object {
        "height": 0,
      }
    }
    value=""
  />
</div>
`;

exports[`Storyshots Components|Toast buttonless(info) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-cmTdod fYxXcv"
    data-test="info-buttonless-toast"
  >
    <div
      className="sc-bxivhb dUTGrc sc-jwKygS fAxulK"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-btzYZH dkdnmv"
      >
        ラベル
      </div>
      <div
        className="sc-lhVmIH lQrEo"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Toast buttonless(warning) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-cmTdod fdiDwp"
    data-test="warning-buttonless-toast"
  >
    <div
      className="sc-bxivhb dUTGrc sc-jwKygS fAxulK"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-btzYZH dkdnmv"
      >
        ラベル
      </div>
      <div
        className="sc-lhVmIH lQrEo"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Toast default(info) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-bYSBpT kjfHNP"
    data-test="info-default-toast"
  >
    <div
      className="sc-bxivhb dUTGrc sc-elJkPf hHMRVH"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-kTUwUJ kredry"
      >
        ラベル
      </div>
      <div
        className="sc-dqBHgY cCpIKq"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
    <span
      className="sc-jtRfpW egykiw"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb dUTGrc sc-elJkPf hHMRVH"
        color="white"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Toast default(warning) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-bYSBpT kVccTX"
    data-test="warning-default-toast"
  >
    <div
      className="sc-bxivhb dUTGrc sc-elJkPf hHMRVH"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-kTUwUJ kredry"
      >
        ラベル
      </div>
      <div
        className="sc-dqBHgY cCpIKq"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
    <span
      className="sc-jtRfpW egykiw"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb dUTGrc sc-elJkPf hHMRVH"
        color="white"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|ToolTip all 1`] = `
<div
  className="sc-gxMtzJ iWcLhG"
  data-test="tool-tip"
  direction="top"
>
  <span
    className="sc-dfVpRl dYRWBT"
  >
    テキスト要素
  </span>
</div>
`;

exports[`Storyshots basics|Icons index 1`] = `
<div
  className="flex flex-wrap w-64"
>
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
</div>
`;

exports[`Storyshots components|FileUploader all 1`] = `
<div
  className="m-16"
>
  <div>
    <div
      className="sc-bRBYWo caeshV"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      width="400px"
    >
      <div
        className="sc-hzDkRC gTUdCw"
      >
        <input
          autoComplete="off"
          className="sc-dVhcbM eUucrI"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-jhAzac gLrmD"
        >
          <div
            className="sc-bxivhb hBuNrQ sc-fBuWsC cHWoKs"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-fMiknA ljiUUo"
          >
            ファイルを選択またはドラッグ&ドロップ
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mt-8"
  >
    <div
      className="sc-bRBYWo hYbPPO"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="sc-hzDkRC gTUdCw"
      >
        <input
          autoComplete="off"
          className="sc-dVhcbM eUucrI"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-jhAzac gLrmD"
        >
          <div
            className="sc-bxivhb hBuNrQ sc-fBuWsC cHWoKs"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-fMiknA ljiUUo"
          >
            hoge.png
          </span>
          <div
            className="sc-eqIVtm bMHPcA"
            onClick={[Function]}
          >
            <div
              className="sc-bxivhb fOXTLs"
              color="rgb(224, 85, 72)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Icon Standard 1`] = `
<div
  className="sc-bxivhb edXnbt"
  color="#333"
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
  size="24px"
/>
`;
